# spatial-memory-evaluation

./: .gitignore  README.md  README.zh-CN.md  claude_sessions_pretty.html  environment.evaluation.yml  object-memory-metric-comparison.md  pyproject.toml  requirements.evaluation.txt
.claude/: task_index.md
.codex/: README.md  adaptation_fidelity_audit.md  agent_designed_baseline.md  agent_designed_heldout_results.md  agent_designed_run3_analysis.md  agent_designed_run4_heldout.md  agent_designed_track1_analysis.md  agent_designed_vs_baselines.md  agentic_eval.md  agentic_eval_plan.md  baseline_registry.md  eval_set_inventory.md  memory_package_spec.md  method_runtime_runbook.md  modules.md  path_registry.md  project-context.md  scannet_10scene_results.json  scannet_10scene_results.md  track4_oc_navqa_findings.md
adapters/: __init__.py  claws_spatial_rag.py  dualmap.py  hovsg.py  llm_with_memory.py
configs/: claws_current_scene_method_kwargs.json  claws_openeqa_scannet_method_kwargs.json  claws_openeqa_scannet_nas_method_kwargs.json  claws_openeqa_scene0709_method_kwargs.json  dualmap_current_scene_method_kwargs.json  dualmap_openeqa_scene0709_method_kwargs.json  hovsg_current_scene_method_kwargs.json  hovsg_openeqa_scene0709_method_kwargs.json  llm_openeqa_scene0709_claws_kwargs.json  llm_openeqa_scene0709_dualmap_kwargs.json  llm_openeqa_scene0709_hovsg_kwargs.json
docs/: SETUP.md
examples/: __init__.py  claws_current_scene_memory_questions.json  claws_current_scene_object_queries.json  dummy_method.py  object_queries.sample.json
scripts/: README.md  (+19 more)
(+234 files in other folders)
