[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spatial-memory-evaluation"
version = "0.1.0"
description = "Standalone harness for spatial memory text and object evaluation."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26,<2",
  "scipy>=1.10",
  "pillow>=10",
  "tqdm>=4.66",
  "openai>=1.3.7",
  "tenacity>=8.2.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["spatial_memory_evaluation*"]

[tool.setuptools.package-data]
spatial_memory_evaluation = ["schemas/memory_package/*.json"]
